--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <a href = "http://m.me/GenietalkSample"> Open Messenger </a>
-<a href = "http://m.me/GenietalkSample"> Open Telegram </a>
+<a href = "http://t.me/GenietalkSamplebot"> Open Telegram </a>
 </body>
 </html>
